seeing if adding webkit overflow scrolling will allow fixed in ipad background attachment

--- a/src/scss/_home-hero.scss
+++ b/src/scss/_home-hero.scss
@@ -1,6 +1,7 @@
 .hero {
   padding: 8rem 4rem;
   background-image: url(../assets/images/globalnet.jpg);
+  -webkit-overflow-scrolling: touch;
   background-attachment: fixed;
   background-size: cover;
   background-position: right;
